[gd_scene load_steps=8 format=3 uid="uid://dpmdrkb100rom"]

[ext_resource type="Texture2D" uid="uid://4exuf276k3ik" path="res://Assets/Menu/Play.png" id="1_3tbrw"]
[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_jy0xv"]
[ext_resource type="Texture2D" uid="uid://x5c5idqkjj0m" path="res://Assets/Menu/Quit.png" id="2_bkm54"]
[ext_resource type="Texture2D" uid="uid://bbprj7clcvsae" path="res://Assets/Menu/title.png" id="3_2twu3"]
[ext_resource type="Texture2D" uid="uid://bk7accaiscktx" path="res://Assets/Menu/gaming-vector-background-landscape-video-game-fantasy-wallpaper-mountain-posters-controller_597121-842.jpg" id="5_mm0if"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n2i82"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3q875"]
bg_color = Color(0.458405, 0.458405, 0.458405, 0.772549)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jy0xv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -2.0
offset_right = 100.0
offset_bottom = 202.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 3

[node name="Title" type="Sprite2D" parent="VBoxContainer"]
position = Vector2(106, -107)
scale = Vector2(0.9, 0.9)
texture = ExtResource("3_2twu3")

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/hover = SubResource("StyleBoxFlat_n2i82")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3q875")
theme_override_styles/normal = SubResource("StyleBoxFlat_n2i82")
icon = ExtResource("1_3tbrw")

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/hover = SubResource("StyleBoxFlat_n2i82")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3q875")
theme_override_styles/normal = SubResource("StyleBoxFlat_n2i82")
icon = ExtResource("2_bkm54")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground"]
position = Vector2(578.397, 323)
scale = Vector2(1.08754, 1.08754)
texture = ExtResource("5_mm0if")

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_quit_pressed"]
